# Chip8-Emu

./: .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: cpp.yml
inc/: emulator.h  graphics.h  memory.h
include/: cpu.hpp  emulator.h  emulator.hpp  graphics.h  input.hpp  memory.h  screen.hpp
src/: cpu.cpp  emulator.c  emulator.cpp  graphics.c  input.cpp  main.c  main.cpp  memory.c  screen.cpp
